[package]
name = "weather_rs"
version = "0.1.1"
authors = ["Eterocell <eterocell@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
exitfailure = "0.5.1"
serde = "1.0.123"
serde_json = "1.0.62"
serde_derive = "1.0.123"
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.2.0", features = ["full"] }
ansi_term = "0.12.1"
